# whirlwind

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  initial-spec.md  justfile
.github/workflows/: ci.yml  release.yml
docs/spec/: architecture.md  operations.md  performance.md  review-strategy.md  security.md  testing.md
docs/tdd/: bug-fixes-track-matching-offsets-paths-session.md  whirlwind-core.md  whirlwind-new.md
src/: cli.rs  config.rs  error.rs  lib.rs  lock.rs  main.rs  metadata.rs  new.rs  progress.rs  project.rs  r2.rs  session.rs  sync.rs
tests/: integration_test.rs  rpp_parsing_test.rs  spike_r2_conditional_put.rs
tests/fixtures/: episode-base-template.RPP
