[package]
name = "pmc-whirlwind"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.94.0"
description = "whirlwind is a collaborative Reaper project sync tool for podcast co-editors. It uses Cloudflare R2 for storage and synchronization."
repository = "https://github.com/picturemecoding/whirlwind"
homepage = "https://github.com/picturemecoding/whirlwind"
documentation = "https://docs.rs/pmc-whirlwind"
readme = "README.md"
keywords = ["cli", "reaper", "podcast", "r2"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Erik Aker <eraker@gmail.com>"]

[[bin]]
name = "whirlwind"
path = "src/main.rs"

[[test]]
name = "spike_r2_conditional_put"
path = "tests/spike_r2_conditional_put.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[[test]]
name = "rpp_parsing_test"
path = "tests/rpp_parsing_test.rs"

[dependencies]
aws-sdk-s3 = { version = "1", features = [] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
dirs = "5"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
md-5 = "0.10"
dialoguer = "0.11"
indicatif = "0.17"
hound = "3"
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
symphonia = { version = "0.5", features = ["aiff", "mp3", "flac", "ogg"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
